# axum

./: .gitignore  Cargo.toml
migrations/: 20250518000001_create_users.sql  20250518000002_create_posts.sql
src/: auth.rs  config.rs  error.rs  main.rs
src/handlers/: auth.rs  post.rs
src/models/: post.rs  user.rs
src/repositories/: post.rs  user.rs
src/routes/: auth.rs  mod.rs  post.rs
src/services/: auth.rs  post.rs
static/: board.html  index.html  login.html  post.html
static/css/: style.css
static/js/: api.js
